backend/tests/golden/queries/negative/10_case_when_simple/query.sdbl
ВЫБРАТЬ
    Ссылка,
    ВЫБОР
        КОГДА Проведен ТОГДА "Проведен"
        ИНАЧЕ "Не проведен"
    КОНЕЦ КАК Статус
ИЗ
    Документ.АвансовыйОтчет
